
        * Various minor bug fixes/improvements:
          * Fix PZX handling on big endian systems (Alberto Garcia).
          * Hide all symbols except the ones in the public API (Alberto
            Garcia).
          * Run tests on 'make check' invocation (Alberto Garcia).
          * Don't generate an edge for the STOP48 TZX block (Fredrick Meunier).

2021-02-27  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.5.0 released.

        * Various minor bug fixes/improvements:
          * Autogenerate code for initialising/freeing snap structure (Sergio
            Baldoví).
          * Fix loading of raw data blocks (Alberto Garcia).
          * Ensure trailing TZX pause blocks result in an edge (Alberto
            Garcia).
          * Fix bits_through_byte calculation in TZX RAW block (Alberto
            Garcia).
          * Remove spurious first pulse in a raw data block (Alberto Garcia).
          * Minimal snapshot support for TTX2000S interface (Sergio Baldoví).
          * Fix prototypes and warnings for MorphOS (Stefan Haubenthal).
          * Change type of len field in GArray to guint (Sergio Baldoví).

2018-07-01  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.4.4 released.

        * Various minor bug fixes/improvements:
          * Fix memory allocation in g_array_set_size() (Sergio Baldoví).
          * Cast whole expressions in printf() statements (Sergio Baldoví).
          * Fix up printf() related warnings (Sergio Baldoví).
          * Fix detection of small files in SZX unit tests (Sergio Baldoví).

2018-06-03  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.4.3 released.

        * Fix TC2048 and TC2068 timings regression (Sergio Baldoví).

        * Add peek block function for tape iterators (Fredrick Meunier).

2018-04-29  Philip Kendall  <philip-fuse@shadowmagic.org.uk>

        * libspectrum 1.4.2 released.
