@@ -83,7 +83,7 @@ print << "CODE";
 
 /* NB: this file is autogenerated from snap_accessors.txt by accessor.pl */
 
-#include <config.h>
+#include "config.h"
 
 #include "internals.h"
 
