@@ -49,7 +49,7 @@ print << "CODE";
 
 /* NB: this file is autogenerated from $ARGV[0] by $0 */
 
-#include <config.h>
+#include "config.h"
 
 #include "internals.h"
 #include "tape_block.h"
